--- a/PttIdAnalysis/historical_records/templates/home.html
+++ b/PttIdAnalysis/historical_records/templates/home.html
@@ -4,5 +4,14 @@
 	</head>
 	<body>
 		<h1>Retrieve User Historical Articles</h1>
+		<form method="POST">
+			<input name="user_id" id="id_query_user" placeholder="Enter a user ID" />
+			{% csrf_token %}
+		</form>
+		<select name="article_type" id="id_query_article_type">
+			<option value="Posted Articles" selected="selected">Posted Articles</option>
+			<option value="Commented Articles">Commented Articles</option>
+			<option value="Posted Articles And Commented Articles">Posted Articles And Commented Articles</option>
+		</select>
 	</body>
 </html>
