--- a/PttIdAnalysis/historical_records/templates/home.html
+++ b/PttIdAnalysis/historical_records/templates/home.html
@@ -4,8 +4,8 @@
 	</head>
 	<body>
 		<h1>Retrieve User Historical Articles</h1>
-		<form method="POST">
-			<input name="user_id" id="id_query_user" placeholder="Enter a user ID" />
+		<form method="POST" action="/query_articles">
+			<input name="author_id" id="id_query_user" placeholder="Enter a user ID" />
 			{% csrf_token %}
 		</form>
 		<select name="article_type" id="id_query_article_type">
